Bug 112208 - FILEOPEN: RTF: Incorrect indent
Summary: FILEOPEN: RTF: Incorrect indent
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.0.0 target:5.4.2
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2017-09-04 11:29 UTC by Xisco Faulí
Modified: 2018-01-17 00:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.0 (695.69 KB, image/png)
2017-09-04 11:29 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-09-04 11:29:41 UTC
Created attachment 136003 [details]
comparison MSO 2010 and LibreOffice 6.0

Steps to reproduce:
1. Open attachment 85639 [details] from bug 69227

Observed behaviour: Year's column is indented to the right. Check attached image

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-09-04 11:30:53 UTC
Regression introduced by:

author	Justin Luth <justin_luth@sil.org>	2017-07-25 16:29:07 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-07-28 08:40:13 (GMT)
commit 756b2431f0006a01affa7c92c2dede2b11166001 (patch)
tree a81e7cec6deb205ef6dcf37b769bd8c12c465872
parent ea3ca5e10aa3190e28fe37801727f8b5f8543e13 (diff)
tdf#108949 rtf writerfilter: apply char properties to footnote
commit fdfdea4d5af51a68f2d497cc5c3359d74c385fd5 for tdf#82173
added that functionality for .docx, but since .rtf didn't support
character props for footnotes, it messed up other formatting.

start/EndCharacterGroup() fixes the reported bug.
runProps() adds the functionality for .rtf that was requested
for .docx in bug 82173.

Bisected with bibisect-linux64-6.0

Adding Cc: to Justin Luth
Comment 2 Justin L 2017-09-04 13:26:01 UTC
Changing version to 5.4 and CCing Miklos

My bibisecting pointed differently - to fix for bug 106953 from author Miklos Vajna commit f528f9499bd91b700c549575e88fa102cfffede9 
tdf#106953 RTF import: fix missing paragraph left margin

Specifically:
+    case NS_ooxml::LN_CT_Ind_left:
+    case NS_ooxml::LN_CT_Ind_right:
Comment 3 Xisco Faulí 2017-09-04 14:20:38 UTC
(In reply to Justin L from comment #2)
> Changing version to 5.4 and CCing Miklos
> 
> My bibisecting pointed differently - to fix for bug 106953 from author
> Miklos Vajna commit f528f9499bd91b700c549575e88fa102cfffede9 
> tdf#106953 RTF import: fix missing paragraph left margin
> 
> Specifically:
> +    case NS_ooxml::LN_CT_Ind_left:
> +    case NS_ooxml::LN_CT_Ind_right:

oh, it's weird. I tried it twice before I put it here. Anyway, I was surprised that you commit was the one changing the behaviour here. The commit you're mentioning makes more sense... Sorry for the noise.
Comment 4 Justin L 2017-09-04 15:53:36 UTC
proposed fix: https://gerrit.libreoffice.org/41901
Comment 5 Commit Notification 2017-09-04 18:29:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72b19aa29f9adcab6dd20d1517208f3b999d055e

tdf#112208 rtfimport: fix missing paragraph first line indent

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Justin L 2017-09-04 18:39:19 UTC
requested backport to 5.4
Comment 7 Xisco Faulí 2017-09-04 18:45:09 UTC
That was extremely fast ;-) thanks a lot!!
Comment 8 Xisco Faulí 2017-09-06 20:48:33 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 9 Commit Notification 2017-09-07 13:36:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4050f780d352c36175d9fb98aa01d7af973d8fe&h=libreoffice-5-4

tdf#112208 rtfimport: fix missing paragraph first line indent

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.