tdf#112208 rtfimport: fix missing paragraph first line indent

This is a followup to commit f528f9499bd91b700c549575e88fa102cfffede9
adding ParaFirstLineIndent to that commit's Para(Left|Right)Margin.

I also added code for hanging indents, but it doesn't look like that
case will ever hit. Just added for completeness. My test unit
was created in Word as a hanging indent, but it invokes the
firstLine case...

Change-Id: I2b04866b9eb4b085503f3b7d3b6e97d4f9e3d19c
Reviewed-on: https://gerrit.libreoffice.org/41901
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Justin Luth <justin_luth@sil.org>